--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="password">Password</string>
     <string name="note">Note</string>
     <string name="log_out">Log out</string>
+    <string name="empty_note">Note can\'t be empty!</string>
+    <string name="author">Author:</string>
+    <string name="created">Created:</string>
 </resources>
