--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="empty_note">Note can\'t be empty!</string>
     <string name="author">Author:</string>
     <string name="created">Created:</string>
+    <string name="user_dont_exist">User do not exist or password is incorrect!</string>
+    <string name="field_empty">Fill all fields, please!</string>
 </resources>
