--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,16 @@
     <string name="password">Password</string>
     <string name="note">Note</string>
     <string name="log_out">Log out</string>
-    <string name="empty_note">Note can\'t be empty!</string>
+    <string name="empty_note">Note can\'t be empty and Date can\'t be outdated!"</string>
     <string name="author">Author:\t</string>
     <string name="created">Created:\t</string>
     <string name="user_dont_exist">User do not exist or password is incorrect!</string>
     <string name="field_empty">Fill all fields, please!</string>
     <string name="edited">Last edited:\t</string>
     <string name="notification">Notification</string>
+    <string name="time">Time:</string>
+    <string name="date_text">Current date</string>
+    <string name="date_button">Pick date</string>
+    <string name="time_text">Current time</string>
+    <string name="time_button">Pick time</string>
 </resources>
