--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,16 @@
     <string name="date_button">Pick date</string>
     <string name="time_text">Current time</string>
     <string name="time_button">Pick time</string>
-
-    <string name="error_unknown_uri">Cannot query unknown URI</string>
+    <string name="title_auth">Authentication</string>
+    <string name="title_notes">Notes</string>
+    <string name="title_edit_note">Edit note</string>
+    <string name="title_new_note">New note</string>
+    <string name="title_edit_notification">Edit notification</string>
+    <string name="title_new_notification">New notification</string>
+    <string name="title_note">Note</string>
+    <string name="title_my_notes">My notes</string>
+    <string name="title_notification">Notification</string>
+    <string name="title_add">Add</string>
+    <string name="title_alert_notification">Your Notification!</string>
+    <string name="alert_info">Info</string>
 </resources>
