--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="title_add">Add</string>
     <string name="title_alert_notification">Your Notification!</string>
     <string name="alert_info">Info</string>
+    <string name="user_exist">This user already exist!</string>
 </resources>
