--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="empty_note">Note can\'t be empty and Date can\'t be outdated!"</string>
     <string name="author">Author:\t</string>
     <string name="created">Created:\t</string>
-    <string name="user_dont_exist">User do not exist or password is incorrect!</string>
+    <string name="user_do_not_exist">User do not exist or password is incorrect!</string>
     <string name="field_empty">Fill all fields, please!</string>
     <string name="edited">Last edited:\t</string>
     <string name="notification">Notification</string>
@@ -33,4 +33,5 @@
     <string name="title_alert_notification">Your Notification!</string>
     <string name="alert_info">Info</string>
     <string name="user_exist">This user already exist!</string>
+    <string name="remember_me">Remember me</string>
 </resources>
